--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,7 +21,29 @@ jobs:
           AWS_DEFAULT_REGION: 'us-west-2'
       
      
+      - name: Deploy in EC2
+        env:
+          PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY  }}
+                 
+          HOST_NAME : ${DNS_ADDR}
+         
+          USER_NAME : ${{USER_NAME  }}
+    
         
+        run: |
+          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${DNS_ADDR} "
+            sudo apt-get update&
+            sudo apt-get install ca-certificates curl gnupg&
+            sudo install -m 0755 -d /etc/apt/keyrings&
+            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg&
+            sudo chmod a+r /etc/apt/keyrings/docker.gpg&
+            echo \&
+           "deb [arch="$(dpkg --print-architecture)" signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \ &
+           "$(. /etc/os-release && echo "$VERSION_CODENAME")" stable" | \ &
+            sudo tee /etc/apt/sources.list.d/docker.list > /dev/null &
+            sudo apt-get update "&
+            sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin"
   
         
     
