--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,9 +25,9 @@ jobs:
         env:
           PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY  }}
                  
-          HOST_NAME : ${DNS_ADDR}
+          HOST_NAME : ${vars.DNS_ADDR}
          
-          USER_NAME : ${{USER_NAME}}
+          USER_NAME : ${vars.USER_NAME}
     
         
         run: |
