--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@master
       - name: Upload to S3
         run: |
-          aws s3 mb s3://latest-test-our-fita
+          #aws s3 mb s3://latest-test-our-fita
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
