--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -35,7 +35,7 @@ jobs:
         
         run: |
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${DNS_ADDR} "
+          ssh -o StrictHostKeyChecking=no -i private_key ${vars.USER_NAME}@${vars.DNS_ADDR} "
             sudo apt-get update&
             sudo apt-get install ca-certificates curl gnupg&
             sudo install -m 0755 -d /etc/apt/keyrings&
