--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -42,7 +42,7 @@ jobs:
             curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg&
             sudo chmod a+r /etc/apt/keyrings/docker.gpg&
             sudo tee /etc/apt/sources.list.d/docker.list > /dev/null &
-            sudo apt-get update "&
+            sudo apt-get update&
             sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin"
   
         
