--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,11 +31,11 @@ jobs:
           HOST_NAME : ${{ vars.DNS_ADDR }}
          
           USER_NAME : ${{ vars.USER_NAME }}
-    
+    #54.212.31.20
         
         run: |
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key $USER_NAME@54.212.31.20"
+          ssh -o StrictHostKeyChecking=no -i private_key $USER_NAME@$HOST_NAME"
             sudo apt-get update&
             sudo apt-get install ca-certificates curl gnupg&
             sudo install -m 0755 -d /etc/apt/keyrings&
