--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -35,14 +35,14 @@ jobs:
         
         run: |
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key $USER_NAME@$HOST_NAME"
+          ssh -o StrictHostKeyChecking=no -i private_key {$USER_NAME}@{$HOST_NAME} "
             sudo apt-get update&
-            sudo apt-get install ca-certificates curl gnupg&
-            sudo install -m 0755 -d /etc/apt/keyrings&
-            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg&
-            sudo chmod a+r /etc/apt/keyrings/docker.gpg&
-            sudo tee /etc/apt/sources.list.d/docker.list > /dev/null &
-            sudo apt-get update&
+           # sudo apt-get install ca-certificates curl gnupg&
+           # sudo install -m 0755 -d /etc/apt/keyrings&
+           # curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg&
+          #  sudo chmod a+r /etc/apt/keyrings/docker.gpg&
+          #  sudo tee /etc/apt/sources.list.d/docker.list > /dev/null &
+         #   sudo apt-get update&
             sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin"
   
         
