--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,6 +24,7 @@ jobs:
           AWS_DEFAULT_REGION: 'us-west-2'
       
   InstallDocker:     
+ 
         name: Deploy in EC2 (Install Docker)
         runs-on: ubuntu-latest
         env:
@@ -32,7 +33,7 @@ jobs:
           HOST_NAME : ${{ vars.DNS_ADDR }}
           
           USER_NAME : ${{ vars.USER_NAME }}
-    #54.212.31.20
+  
         
           run: |
            echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
@@ -45,18 +46,17 @@ jobs:
            sudo tee /etc/apt/sources.list.d/docker.list > /dev/null &
             sudo apt-get update&
             sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin"
+
             
-  Test:
-        name: Test! Check the deployed service URL
-     
-        uses: jtalk/url-health-check-action@v3
-        with:
-      # Check the following URLs one by one sequentially
-         url: https://${HOST_NAME}|http://${HOST_NAME}
-      # Follow redirects, or just report success on 3xx status codes
-         follow-redirect: false # Optional, defaults to "false"
-      # Fail this action after this many failed attempts
-         max-attempts: 3 # Optional, defaults to 1
-      # Delay between retries
-         retry-delay: 5s # Optional, only applicable to max-attempts > 1 
-    
+  Testssssss:  
+      
+ 
+        runs-on: ubuntu-latest
+        steps:
+  
+         - name: Check http status code of production site
+           uses: lakuapik/gh-actions-http-status@v1
+           with:
+            sites: '["http://${HOST_NAME}", "https://${HOST_NAME}"]'
+            expected: '[301, 200]'
+   
