--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,18 +23,14 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: 'us-west-2'
       
-  InstallDocker:     
  
-        name: Deploy in EC2 (Install Docker)
-        runs-on: ubuntu-latest
+      - name: Deploy in EC2 (Install Docker)
         env:
           PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY  }}
                  
           HOST_NAME : ${{ vars.DNS_ADDR }}
           
-          USER_NAME : ${{ vars.USER_NAME }}
-  
-        
+          USER_NAME : ${{ vars.USER_NAME}}
           run: |
            echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
            ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} "
@@ -50,11 +46,13 @@ jobs:
             
   Testssssss:  
       
- 
+        
         runs-on: ubuntu-latest
         steps:
-  
+         
          - name: Check http status code of production site
+           env :
+                HOST_NAME : ${{ vars.DNS_ADDR }}
            uses: lakuapik/gh-actions-http-status@v1
            with:
             sites: '["http://${HOST_NAME}", "https://${HOST_NAME}"]'
