--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -41,7 +41,9 @@ jobs:
             sudo chmod a+r /etc/apt/keyrings/docker.gpg&
            sudo tee /etc/apt/sources.list.d/docker.list > /dev/null &
             sudo apt-get update&
-            sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin"
+            sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin&
+            docker -v&
+            docker ps"
 
             
   Testssssss:  
