--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,19 +29,21 @@ jobs:
           PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY  }}
                  
         #  HOST_NAME : ${{ vars.DNS_ADDR }}
-          HOST_NAME : ec2-34-219-74-168.us-west-2.compute.amazonaws.com 
+        #  HOST_NAME : ec2-34-219-74-168.us-west-2.compute.amazonaws.com 
+          HOST_NAME : ec2-18-236-146-207.us-west-2.compute.amazonaws.com 
           USER_NAME : ${{ vars.USER_NAME}}
         run: |
            echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
            ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} "
+           for pkg in docker.io docker-doc docker-compose docker-compose-v2 podman-docker containerd runc; do sudo apt-get remove $pkg; done&
            sudo apt-get update&
            sudo apt-get install ca-certificates curl gnupg&
            sudo install -m 0755 -d /etc/apt/keyrings&
-           curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --no-tty --dearmor -o /etc/apt/keyrings/docker.gpg&
+           curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg&
            sudo chmod a+r /etc/apt/keyrings/docker.gpg
            echo "deb [arch="$(dpkg --print-architecture)" signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu 
-           "$(. /etc/os-release && echo "$VERSION_CODENAME")" stable" | 
-           sudo tee /etc/apt/sources.list.d/docker.list > /dev/null&
+                 "$(. /etc/os-release && echo "$VERSION_CODENAME")" stable" | 
+                sudo tee /etc/apt/sources.list.d/docker.list > /dev/null&
            
             sudo apt-get update&
             sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin&
@@ -60,6 +62,7 @@ jobs:
            env :
                #HOST_NAME : ${{ vars.DNS_ADDR }}
                HOST_NAME : ec2-34-219-74-168.us-west-2.compute.amazonaws.com 
+               #HOST_NAME : ec2-18-236-146-207.us-west-2.compute.amazonaws.com  
            uses: lakuapik/gh-actions-http-status@v1
            with:
             sites: '["http://${HOST_NAME}", "https://${HOST_NAME}"]'
