--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -61,8 +61,8 @@ jobs:
                 
             sudo apt-get update&
             sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin&
-            docker -v&
-            docker ps&
+            sudo docker -v&
+            sudo docker ps&
             sudo docker run hello-world"
             
   Testssssss:  
