--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -63,7 +63,7 @@ jobs:
             sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin&
             sudo docker -v&
             sudo docker ps&
-            sudo docker run hello-world"
+            sudo docker pull vasiliskovs/petclinic:5.3.22"
             
   Testssssss:  
       
