--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -52,8 +52,8 @@ jobs:
           PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY  }}
                  
         #  HOST_NAME : ${{ vars.DNS_ADDR }}
-        #  HOST_NAME : ec2-34-219-74-168.us-west-2.compute.amazonaws.com 
-          HOST_NAME : ec2-18-236-146-207.us-west-2.compute.amazonaws.com 
+          HOST_NAME : ec2-34-219-74-168.us-west-2.compute.amazonaws.com 
+        #  HOST_NAME : ec2-18-236-146-207.us-west-2.compute.amazonaws.com 
           USER_NAME : ${{ vars.USER_NAME}}
         run: |
            echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
@@ -63,7 +63,9 @@ jobs:
             sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin&
             sudo docker -v&
             sudo docker ps&
-            sudo docker pull vasiliskovs/petclinic:5.3.22"
+            sudo docker pull vasiliskovs/petclinic:5.3.22&
+            sudo docker run -d vasiliskovs/petclinic:5.3.22&
+            sudo docker ps""
             
   Testssssss:  
       
