--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -61,11 +61,12 @@ jobs:
                 
             sudo apt-get update&
             sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin&
-            sudo docker -v&
-            sudo docker ps&
-            sudo docker pull vasiliskovs/petclinic:5.3.22&
-            sudo docker run -d vasiliskovs/petclinic:5.3.22&
-            sudo docker ps"
+            sudo usermod -aG docker $USER&
+            docker -v&
+            docker ps&
+            docker pull vasiliskovs/petclinic:5.3.22&
+            docker run -d vasiliskovs/petclinic:5.3.22&
+            docker ps"
             
   Testssssss:  
       
