--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -41,10 +41,22 @@ jobs:
            sudo install -m 0755 -d /etc/apt/keyrings&
            sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg&
            sudo chmod a+r /etc/apt/keyrings/docker.gpg"
-           echo "deb [arch="$(dpkg --print-architecture)" signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \
-              "$(. /etc/os-release && echo "$VERSION_CODENAME")" stable" | \
-              sudo tee /etc/apt/sources.list.d/docker.list > /dev/null         
-           
+          
+              
+      - name: Deploy in EC2 (Install Docker)1.5
+        env:
+          PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY  }}
+                 
+        #  HOST_NAME : ${{ vars.DNS_ADDR }}
+        #  HOST_NAME : ec2-34-219-74-168.us-west-2.compute.amazonaws.com 
+          HOST_NAME : ec2-54-185-19-93.us-west-2.compute.amazonaws.com 
+          USER_NAME : ${{ vars.USER_NAME}}
+        run: |
+           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} "
+           echo "deb [arch="$(dpkg --print-architecture)" signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu 
+              "$(. /etc/os-release && echo "$VERSION_CODENAME")" stable" | 
+           sudo tee /etc/apt/sources.list.d/docker.list > /dev/null   
            
       - name: Deploy in EC2 (Install Docker)2
         env:
