--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -53,9 +53,9 @@ jobs:
           USER_NAME : ${{ vars.USER_NAME}}
         run: |
            echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} "
-           echo "deb [arch="$(dpkg --print-architecture)" signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu 
-              "$(. /etc/os-release && echo "$VERSION_CODENAME")" stable" | 
+           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} 
+           echo "deb [arch="$(dpkg --print-architecture)" signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \
+              "$(. /etc/os-release && echo "$VERSION_CODENAME")" stable" | \
            sudo tee /etc/apt/sources.list.d/docker.list > /dev/null   
            
       - name: Deploy in EC2 (Install Docker)2
