--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -38,7 +38,8 @@ jobs:
            for pkg in docker.io docker-doc docker-compose docker-compose-v2 podman-docker containerd runc; do sudo apt-get remove $pkg; done &
            cd $HOME &
            curl -fsSL https://get.docker.com -o get-docker.sh &
-           sudo sh ./get-docker.sh --dry-run"
+           sudo sh ./get-docker.sh --dry-run &
+           docker -v"
           
               
    
