--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -35,11 +35,11 @@ jobs:
         run: |
            echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
            ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} "
-           for pkg in docker.io docker-doc docker-compose docker-compose-v2 podman-docker containerd runc; do sudo apt-get remove $pkg; done &
-           cd $HOME &
-           curl -fsSL https://get.docker.com -o get-docker.sh &
-           sudo sh ./get-docker.sh --dry-run &
-           docker -v"
+           for pkg in docker.io docker-doc docker-compose docker-compose-v2 podman-docker containerd runc; do sudo apt-get remove $pkg; done \
+           && cd $HOME \
+           && curl -fsSL https://get.docker.com -o get-docker.sh \
+           && sudo sh ./get-docker.sh --dry-run \
+           && docker -v"
           
               
    
