--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -76,6 +76,8 @@ jobs:
     #        docker pull vasiliskovs/petclinic:5.3.22&
      #       docker run -d vasiliskovs/petclinic:5.3.22&
    #         docker ps"
+
+   
             
   Testssssss:  
       
@@ -92,4 +94,39 @@ jobs:
            with:
             sites: '["http://${HOST_NAME}", "https://${HOST_NAME}"]'
             expected: '[301, 200]'
-   
+
+  Copy_file:         
+    runs-on: ubuntu-latest
+    env:
+          PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY  }}
+                 
+     
+          HOST_NAME : ec2-54-185-19-93.us-west-2.compute.amazonaws.com 
+          USER_NAME : ${{ vars.USER_NAME}}
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Install AWS CLI
+      run: |
+        echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} "
+           sudo apt-get update&
+           sudo apt-get install -y awscli"
+
+    - name: Copy to S3
+      env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: 'us-west-2'
+          PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY  }}
+          HOST_NAME : ec2-54-185-19-93.us-west-2.compute.amazonaws.com 
+          USER_NAME : ${{ vars.USER_NAME}}
+
+      run: |
+        echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} "        
+           sudo docker save petclinic_2:1.0.0 | gzip > myimage_latest.tar.gz"
+           aws s3 cp myimage_latest.tar.gz s3://latest-test-our-fita --region us-west-2
+
+        
