--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -67,14 +67,14 @@ jobs:
          # HOST_NAME : ec2-54-185-19-93.us-west-2.compute.amazonaws.com 
           USER_NAME : ${{ vars.USER_NAME}}
         run: |
-    #       echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-     #      ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} "
-    #            
-     #       docker -v&
-     #       docker ps&
-    #        docker pull vasiliskovs/petclinic:5.3.22&
-     #       docker run -d vasiliskovs/petclinic:5.3.22&
-   #         docker ps"
+           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} "
+               
+            docker -v&
+            docker ps&
+            docker pull vasiliskovs/petclinic:5.3.22&
+            docker run -p 80:8080 -d vasiliskovs/petclinic:5.3.22  &
+            docker ps"
 
    
             
