--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -91,8 +91,8 @@ jobs:
              HOST_NAME : ${{ vars.DNS_ADDR }}
            uses: lakuapik/gh-actions-http-status@v1
            with:
-            sites: '["https://ec2-34-219-74-168.us-west-2.compute.amazonaws.com", "http://ec2-34-219-74-168.us-west-2.compute.amazonaws.com"]'
-            expected: '[301, 200]'
+            sites: '[ "http://ec2-34-219-74-168.us-west-2.compute.amazonaws.com"]'
+            expected: '[ 200]'
 
   Copy_file:         
     runs-on: ubuntu-latest
