--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -125,7 +125,8 @@ jobs:
       run: |
         echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
            ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} "        
-           sudo docker save petclinic_2:1.0.0 | gzip > myimage_latest.tar.gz"
-           aws s3 cp myimage_latest.tar.gz s3://latest-test-our-fita --region us-west-2
+           sudo docker save petclinic_2:1.0.0 | gzip > myimage_latest.tar.gz&
+           sudo aws s3 cp myimage_latest.tar.gz s3://latest-test-our-fita --region us-west-2"
+ 
 
         
