--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -109,9 +109,10 @@ jobs:
     - name: Install AWS CLI
       run: |
         echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} "
-           sudo apt-get update&
-           sudo apt-get install -y awscli"
+           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} 
+          #"
+           #sudo apt-get update&
+          # sudo apt-get install -y awscli"
 
     - name: Copy to S3
       env:
