--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -127,6 +127,7 @@ jobs:
         echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
            ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} "        
            sudo docker save petclinic_2:1.0.0 | gzip > myimage_latest.tar.gz&
+           aws configure set aws_access_key_id ${AWS_ACCESS_KEY_ID} && aws configure set aws_secret_access_key ${AWS_SECRET_ACCESS_KEY} && aws configure set default.region ${AWS_DEFAULT_REGION}&
            sudo aws s3 cp myimage_latest.tar.gz s3://latest-test-our-fita --region us-west-2"
  
 
