--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -126,7 +126,7 @@ jobs:
       run: |
         echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
            ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} "        
-           sudo docker save petclinic_2:1.0.0 | gzip > myimage_latest.tar.gz&
+           sudo docker save petclinic:5.3.22 | gzip > myimage_latest.tar.gz&
            sudo aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID&
            sudo aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY&
            sudo aws configure set default.region $AWS_DEFAULT_REGION&
