--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -109,10 +109,9 @@ jobs:
     - name: Install AWS CLI
       run: |
         echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} 
-          #"
-           #sudo apt-get update&
-          # sudo apt-get install -y awscli"
+           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} "
+           sudo apt-get update&
+           sudo apt-get install -y awscli"
 
     - name: Copy to S3
       env:
@@ -131,6 +130,28 @@ jobs:
            sudo aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY&
            sudo aws configure set default.region $AWS_DEFAULT_REGION&
            sudo aws s3 cp myimage_latest.tar.gz s3://latest-test-our-fita --region us-west-2"
- 
 
-        
+           
+  Petclinic_deploy:         
+   runs-on: ubuntu-latest 
+   steps:
+   - name: copy Dockerfile file via ssh key
+     uses: appleboy/scp-action@master
+     with:
+      host: ${{ vars.DNS_ADDR }}
+      username: ${{ vars.USER_NAME}}
+    #  port: ${{ secrets.PORT }}
+      key: ${{ secrets.AWS_PRIVATE_KEY  }}}
+      source: "Dockerfile"
+      target: "home/ubuntu/custom_pet/"
+   - name: Deploy Docker
+     env:
+          
+          PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY  }}
+          HOST_NAME : ${{ vars.DNS_ADDR }}
+          USER_NAME : ${{ vars.USER_NAME}}
+
+     run: |
+        echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} "        
+           ls"    
