--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -141,7 +141,7 @@ jobs:
       host: ${{ vars.DNS_ADDR }}
       username: ${{ vars.USER_NAME}}
     #  port: ${{ secrets.PORT }}
-      key: ${{ secrets.AWS_PRIVATE_KEY  }}}
+      key: ${{ secrets.AWS_PRIVATE_KEY  }}
       source: "Dockerfile"
       target: "home/ubuntu/custom_pet/"
    - name: Deploy Docker
