--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -136,14 +136,14 @@ jobs:
    runs-on: ubuntu-latest 
    steps:
    - name: copy Dockerfile file via ssh key
-     uses: appleboy/scp-action@master
+     uses: appleboy/scp-action@v0.1.4
      with:
       host: ${{ vars.DNS_ADDR }}
       username: ${{ vars.USER_NAME}}
     #  port: ${{ secrets.PORT }}
       key: ${{ secrets.AWS_PRIVATE_KEY  }}
-      source: "Dockerfile"
-      target: "home/ubuntu/custom_pet/"
+      source: "Dockerfile, README.md"
+      target: "/home/ubuntu/custom_pet/"
    - name: Deploy Docker
      env:
           
