--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -135,15 +135,16 @@ jobs:
   Petclinic_deploy:         
    runs-on: ubuntu-latest 
    steps:
-   - name: copy Dockerfile file via ssh key
-     uses: appleboy/scp-action@v0.1.4
+
+   - name: Deploy to Staging server
+     uses: easingthemes/ssh-deploy@main
      with:
-      host: ${{ vars.DNS_ADDR }}
-      username: ${{ vars.USER_NAME}}
-    #  port: ${{ secrets.PORT }}
-      key: ${{ secrets.AWS_PRIVATE_KEY  }}
-      source: "/Dockerfile, /README.md, images/*"
-      target: "/home/ubuntu/custom_pet/"
+      SSH_PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY  }}
+      SOURCE: "README.md"
+      REMOTE_HOST: ${{ vars.DNS_ADDR }}
+      REMOTE_USER: ${{ vars.USER_NAME}}
+   #   TARGET: ${{ secrets.REMOTE_TARGET }}
+  
    - name: Deploy Docker
      env:
           
