--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -149,7 +149,7 @@ jobs:
      run: |
            echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
            ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} " 
-           sudo  ./stop_all_containers.sh 
+           sudo  ./stop_all_containers.sh& 
            docker build -t petclinic22:1.0.0 . &
            docker pull springcommunity/spring-framework-petclinic&
            docker run -p 8080:8080 -d petclinic22:1.0.0&
