--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -111,12 +111,16 @@ jobs:
 
       run: |
         echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} "        
+           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} " 
+           sudo rm -f /root/.aws/credentials&
            sudo docker save petclinic22:1.0.0 | gzip > myimage_latest.tar.gz&
+           sudo aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID&
+           sudo aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY&
+           sudo aws configure set default.region $AWS_DEFAULT_REGION&
            sudo aws s3 cp myimage_latest.tar.gz s3://latest-test-our-fita --region us-west-2"
-      #    sudo aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID&
-       #    sudo aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY&
-       #    sudo aws configure set default.region $AWS_DEFAULT_REGION&
+          
+
+       
            
   Petclinic_deploy:         
    runs-on: ubuntu-latest 
