--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -117,7 +117,7 @@ jobs:
            sudo aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID&
            sudo aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY&
            sudo aws configure set default.region $AWS_DEFAULT_REGION&
-           sudo aws s3 cp myimage_latest.tar.gz s3://latest-test-our-fita --region us-west-2"
+           sudo aws s3 cp hello_world.md s3://latest-test-our-fita --region us-west-2"
           
 
        
